# Ashwathama_Chess_Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  evaluate.hpp
api/: .env.example  README.md  engine_runner.py  requirements.txt  server.py
src/: Ashwathama_chess_engine.cpp  attacks.hpp  board.hpp  file_interpreter.hpp  main.cpp  moves.hpp  uci.cpp  uci.hpp  utils.hpp
tests/: history.csv
web/: .gitignore  index.html  package.json  tailwind.config.js
web/src/: App.css  App.jsx  index.css
web/src/components/: ChessBoardUI.jsx  MoveHistory.jsx
